[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/PC/PC_Spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.75, 21.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.86641, 13.4536 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 11.25, 21.75 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="PC_Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 7, 10.4706 )
scale = Vector2( 1.75, 2.05882 )
frames = ExtResource( 1 )
animation = "cast"
frame = 5
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 11.5, 21.5 )
rotation = -3.14159
scale = Vector2( 2.4717, -1.59809 )
shape = SubResource( 2 )

[connection signal="animation_finished" from="PC_Sprite" to="." method="_on_PC_Sprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
